<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070c1f">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:id="@+id/headerLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_app"
            android:scaleType="fitXY"
            android:src="@drawable/header_logo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPlanets"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:clipToPadding="false"
            android:scrollbars="vertical" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/logout"
        android:src="@drawable/ic_logout"
         />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/loadingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="60dp"
        android:text="@string/loading_default" />

</FrameLayout>
